k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
  labels:
    name: status-page
    app: status-page
