k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-service
  namespace: status-page
  labels:
    app: status-page
    component: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: status-page
    component: app
